--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   },
   "dependencies": {
     "gatsby": "^2.15.35",
+    "gatsby-plugin-react-helmet": "^3.1.11",
+    "gatsby-plugin-typography": "^2.3.12",
     "modularscale": "^2.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-helmet": "^5.2.1",
+    "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-breakpoint-constants": "^0.16.19"
   },
