--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-remark-prismjs": "^3.3.18",
     "gatsby-remark-responsive-iframe": "^2.2.23",
     "gatsby-remark-smartypants": "^2.1.12",
+    "gatsby-source-filesystem": "^2.1.33",
     "gatsby-transformer-remark": "^2.6.28",
     "modularscale": "^2.0.1",
     "prismjs": "^1.17.1",
